# temperature

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  readme.md  smooth-temperature-bin-0.1.0-1-x86_64.pkg.tar.xz  smooth-temperature-bin-0.2.0-1-x86_64.pkg.tar.xz  temperature
src/: lpfilter.rs  main.rs  sensor.rs  sensor_group.rs  smooth-temperature  validators.rs
src/temperature-0.1.0/src/: validators.rs
